Grids: beginning of the work to link SmartInput to slider, as originally envisaged...  (the main visible change is a persistent display state on the last Input clicked)  - css different style for a '.plain-cell.linkOn'  - Grid_Section_LineSetBoxie checks if WgSmartInputs should be rendered with 'isLinkOn' set true  - Composed a component 'WgSmartInput_LSB' for <Grid_Section_LineSetBoxie>: better code reuse  - added a state 'sliderLink' to <MainTab_Grid>. It is no longer a totally controlled component.  - <WgSmartInput>: new display class (I'm now thinking the distinct 'linkOn' display state is not totally necessary.)

--- a/react-pgt/public/css/Wg/WgSmartInput.css
+++ b/react-pgt/public/css/Wg/WgSmartInput.css
@@ -28,9 +28,18 @@ input.plain-cell:hover{
     color: rgba(0,0,0,0.7);
 }
 
+input.plain-cell.linkOn{
+    border-color: #14555c;
+    box-shadow: 0px 0px 2px 1px rgba(28, 115, 124, 0.4);
+    color: #14555c;
+}    
+
+
 input.plain-cell:focus{
     border-color: rgba(0,70,180,0.8);
     background: rgba(255,255,255,0.8);
     color: black;
     box-shadow: 0px 0px 5px 1px rgba(36, 166, 191, 0.42);
 }
+
+
